<resources>
    <string name="app_name">Car Park</string>
    <string name="checkIn">Check-In</string>
    <string name="checkOut">Check-Out</string>
    <string name="duration">Duration</string>
    <string name="vehicleNo">Vehicle No.</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="addVehicle">Add Vehicle</string>
    <string name="title_activity_my_vehicle">My Vehicle</string>
    <string name="card">Card</string>
    <string name="add_payment">Add Payment Card</string>
    <string name="others">Others</string>
    <string name="barter">Barter</string>
    <string name="paystack">Paystack</string>
    <string name="promotions">Promotions</string>
    <string name="add_promo_code">Get Promo Code</string>
    <string name="show_qr">Show QR code at parking Lot</string>
    <string name="qr_code">QR CODE</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="booking_id">Booking ID</string>
    <string name="id_">#000000</string>
    <string name="parking_slot">Parking Slot</string>
    <string name="slot_">Floor XX Section XX Lane XX</string>
    <string name="from">From</string>
    <string name="date">Sun, 20 Oct.</string>
    <string name="get_direction">Get direction</string>
    <string name="time_to">10:00 AM</string>
    <string name="to">To</string>
    <string name="time_t">10:00 AM</string>
    <string name="vehicle">Vehicle</string>
    <string name="lexus_rx330">Lexus RX330</string>
    <string name="lng122bw">LNG122BW</string>
    <string name="promo_code"><font size="16">Promo Code</font></string>
    <string name="enter_the_promo_code_and_it_will_be_applied_to_your_next_parking_reservation">Enter the promo code and it will be applied\n to your next parking reservation</string>
    <string name="apply">Apply</string>
    <string name="car_park_name">Car Park Name</string>
    <string name="amount">Amount</string>
    <string name="back">Back</string>
    <string name="facebook_app_id">2687903551262284</string>
    <string name="fb_login_protocol_scheme">fb2687903551262284</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="where_would_you_love_to_park">Where would you love to park?</string>
    <string name="enter_the_4_digit_code_sent">Enter the 4-Digit code sent</string>
    <string name="enter_name">Enter Name</string>
    <string name="continueButton">Continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit">Edit</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="car_make">Car Make and Model</string>
    <string name="main_ride">This is my main ride.</string>
    <string name="button.save">Save</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="about_app">Our car parking solution is called ParkPlace - Simply everyones solution to parking.

If youd ask, is there a need for this? - Yes indeed. And our assertion is HEAVILY backed up with research data.

ParkPlace is a parking reservation solution.

We partner with car parks throughout the country to provide you with a guaranteed parking spot at a discounted price.

Here is how we work in 3 simple steps

\n 1. You search. Find and compare pricing on convenient parking spots near your destination

Driving to work, church/mosque, mall, party etc, all you need is to enter your destination and ParkPlace shows all the numerous places you can park your vehicular asset.

You get to see number of vacant spots

\n 2. You book. Either park right in and pay or schedule ahead of time by prepaying for your spot. You get a parking pass instantly via text, email or the app

\n 3. You park. Scan or show your parking identification number when you arrive.

\n No stress via wasting fuel to look for parking lots.
\n No stress by causing traffic
\n No stress so you can concentrate on other things that matter most.

\n Here are a few mentions as it pertains to the flow:

\n - To ease user integration, signup is only necessary when you need to pay to book ahead or drive in. And that simply requires Facebook authentication and verification of phone number.

\n - Because we do not own these lots, there may be occasions parking lots arent available, so we notify you via email, sms or the app once a parking lot is opened around your searched area.

\n- Research data shows the same set of people are likely to park at the same spot daily because of business, education or other need, there is the option to PURCHASE an available slot in a parking lot for a duration of time.

\nIt is simply market aggregation. A win - win scenerio for everyone involved - the users, the car park owners, you (and your money) and our lovely planet.


\n\nTo use ParkPlace, search for parking on our app or website (yeah) before you arrive, choose the place-space that works best for you, and book the space.

\n  We are confident to tell you we do not own any single park but we control thousands of parking lots across the country..</string>


</resources>
