<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".views.InvoiceActivity">

    <TextView
        android:id="@+id/invoice_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_qr"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/qr_code"
        android:id="@+id/qr_code"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoice_text"
        app:srcCompat="@drawable/qrcode_icon_1" />

    <TextView
        android:id="@+id/booking_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/booking_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code" />

    <TextView
        android:id="@+id/booking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/booking_text"
        app:layout_constraintTop_toBottomOf="@+id/booking_text" />

    <TextView
        android:id="@+id/slot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parking_slot"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_id" />

    <TextView
        android:id="@+id/parking_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Floor 3 Section D Lane 3"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/slot_text"
        app:layout_constraintTop_toBottomOf="@+id/slot_text" />

    <TextView
        android:id="@+id/from_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/from"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking_slot" />

    <TextView
        android:id="@+id/from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/from_text"
        app:layout_constraintTop_toBottomOf="@+id/from_text" />

    <Button
        android:id="@+id/btn_get_direction"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cornered_rectangle_black_backgroud"
        android:drawableStart="@drawable/get_direction_1"
        android:drawablePadding="5dp"
        android:onClick="getDirection"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/get_direction"
        android:textColor="@color/color_white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/qr_code" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/from_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/from_date"
        app:layout_constraintTop_toBottomOf="@+id/from_date" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#888888"
        app:layout_constraintBottom_toBottomOf="@+id/to_date"
        app:layout_constraintEnd_toStartOf="@+id/to_date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/from_date"
        app:layout_constraintTop_toTopOf="@+id/to_date" />

    <TextView
        android:id="@+id/to_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/to"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/parking_slot" />

    <TextView
        android:id="@+id/to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/to_text"
        app:layout_constraintTop_toBottomOf="@+id/to_text" />

    <TextView
        android:id="@+id/to_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/to_date"
        app:layout_constraintTop_toBottomOf="@+id/to_date" />

    <TextView
        android:id="@+id/vehicle_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/vehicle"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_time" />

    <TextView
        android:id="@+id/vehicle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lexus_rx330"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/vehicle_text"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_text" />

    <TextView
        android:id="@+id/vehicle_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lng122bw"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/vehicle_name"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_name" />

    <View
        android:id="@+id/divider5"
        android:layout_width="377dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_number" />

</androidx.constraintlayout.widget.ConstraintLayout>